aded sign-up Endpoint and Code refactoring